Fixed masonry layout break issue

--- a/src/css/view/product-grid.scss
+++ b/src/css/view/product-grid.scss
@@ -1839,6 +1839,10 @@
                 text-align: center;
                 border: 1px solid black;
                 overflow: hidden;
+
+                &.first {
+                    clear: none;
+                }
             }
         }
     }
